alignment fixes

--- a/src/models/about.css
+++ b/src/models/about.css
@@ -7,11 +7,6 @@
 	margin-bottom: 50px;
 }
 
-.aboutimg {
-	margin-left: -120px;
-	margin-bottom: 4rem;
-}
-
 .about {
 	background: #eedff7;
 }
