--- a/src/models/resume.css
+++ b/src/models/resume.css
@@ -3,7 +3,7 @@
 }
 .aboutimg {
 	margin-left: -90px;
-	margin-bottom: 7rem;
+	margin-bottom: 5rem;
 }
 
 ul.alt {
@@ -35,7 +35,7 @@ ul.alt li:first-child {
 		max-width: 380px;
 	}
 	.resumedesc {
-		margin-top: -90px;
+		margin-top: -60px;
 		margin-left: 15px;
 		margin-right: 15px;
 	}
